2006-10-19 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/BaseThought.py:
	* src/DrawingThought.py:
	* src/ImageThought.py:
	Adapt to fit new text entry stuff (pass im_context to
	begin_edit which isn't called for other thought types)
	
	* src/MMapArea.py:
	* src/TextThought.py:
	New text entry stuff.  Pass all keystrokes
	through an IM Context.  Picks up dead keys
	and unicode entry (though no cool underlines u atm).
	Update view entirely when > 1 key is pressed in
	quick succession
	Construct a byte table in text thoughts to handle
	proper deletion / selection / movement within
	multibyte characters


2006-10-18 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/BaseThought.py:
	Fix typo in docstring (Thanks to Rob Tirrell)


2006-10-17 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/TextBufferMarkup.py:
	* src/MMapArea.py:
	* data/labyrinth-ui.xml:
	Implement cut / copy / paste for thoughts and extended buffer
	New menu - "Edit" for copy etc., delete thought and View Extended
	Minor edit of TextBufferMarkup
	Clipboard works for both primary selection and main clipboard :)


	* doc/TheFuture:
	A few minor updates from the Export stuff below

	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/DrawingThought.py:
	* src/Links.py:
	* src/utils.py:
	* src/Browser.py:
	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	* data/labyrinth-ui.xml:
	* data/labyrinth.glade:
	Implement "Export as Image" in File menu.
	Supports png and jpg.  Whether supported is determined
	based on file extension.  Initial file name comes from
	map title.
	Export dialog is in glade file (need to move glade stuff
	into utils!)
	Not fully finished - spin boxes need hooked up
	Several new methods in all thought classes (update_bbox,
	export, get_max_area)


2006-10-16 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/MMapArea.py:
	When loading, ensure nthoughts > actual thoughts on canvas